[fix] Run Cloudflare tasks only when prod deployment

--- a/ansible/roles/wordpress-namespace/tasks/main.yml
+++ b/ansible/roles/wordpress-namespace/tasks/main.yml
@@ -65,6 +65,8 @@
     - wp.nginx
 
 - name: Cloudflare Settings
+  when: >-
+    "openshift_namespaces_prod" in group_names
   include_tasks:
     file: cloudflare-settings.yml
     apply:
