--- a/ansible/roles/wordpress-namespace/vars/cloudflare-vars.yml
+++ b/ansible/roles/wordpress-namespace/vars/cloudflare-vars.yml
@@ -1,7 +1,32 @@
-cloudflare_secrets: "{{ lookup('file', '/keybase/team/epfl_wp_prod/cloudflare-secrets.yml') | from_yaml }}"
+_cloudflare_secrets: "{{ lookup('file', '/keybase/team/epfl_wp_prod/cloudflare-secrets.yml') | from_yaml }}"
 cloudflare_api_url: "https://api.cloudflare.com/client/v4"
-cloudflare_api_zone_id: "{{ cloudflare_secrets.API_ZONE_ID }}"
-cloudflare_api_tls_settings_token: "{{ cloudflare_secrets.API_TLS_SETTINGS_TOKEN }}"
-cloudflare_api_rules_settings_token: "{{ cloudflare_secrets.API_RULES_SETTINGS_TOKEN }}"
-cloudflare_http_resp_headers_transf_ruleset_id: "{{ cloudflare_secrets.HTTP_RESP_HEADERS_TRANSF_RULESET_ID }}"
-cloudflare_resp_header_csp_value: "default-src 'self' 'unsafe-inline' *.epfl.ch; script-src 'self' 'unsafe-inline' 'unsafe-eval' *.epfl.ch https://ajax.googleapis.com https://cdnjs.cloudflare.com https://connect.facebook.net https://platform.twitter.com https://www.google-analytics.com https://www.googletagmanager.com https://www.instagram.com https://www.youtube.com https://*.cast.switch.ch https://player.vimeo.com; object-src 'none'; connect-src 'self' https://*.cast.switch.ch https://*.cloudfront.net *.epfl.ch https://api.cdnjs.com https://*.google-analytics.com https://stats.g.doubleclick.net https://www.google-analytics.com; frame-src 'self' *.epfl.ch https://datawrapper.dwcdn.net https://player.vimeo.com https://api.cast.switch.ch https://platform.twitter.com https://www.instagram.com https://www.youtube.com; style-src-elem 'self' 'unsafe-inline' https://fonts.googleapis.com *.epfl.ch; font-src 'self' https://fonts.gstatic.com *.epfl.ch data:; media-src 'self' *.epfl.ch https://*.cloudfront.net data:; img-src * data: https://s.w.org https://syndication.twitter.com https://www.google-analytics.com; worker-src 'none' blob:; report-uri https://report-uri.epfl.ch/csp-report;"
+cloudflare_api_zone_id: "{{ _cloudflare_secrets.API_ZONE_ID }}"
+cloudflare_api_tls_settings_token: "{{ _cloudflare_secrets.API_TLS_SETTINGS_TOKEN }}"
+cloudflare_api_rules_settings_token: "{{ _cloudflare_secrets.API_RULES_SETTINGS_TOKEN }}"
+cloudflare_http_resp_headers_transf_ruleset_id: "{{ _cloudflare_secrets.HTTP_RESP_HEADERS_TRANSF_RULESET_ID }}"
+cloudflare_resp_header_csp_value: >-
+   {{ _cloudflare_resp_header_csp | regex_replace('[ \n]+', ' ', multiline=True) }}
+_cloudflare_resp_header_csp: |-
+  default-src 'self' 'unsafe-inline' *.epfl.ch;
+  script-src 'self' 'unsafe-inline' 'unsafe-eval' *.epfl.ch
+                    https://ajax.googleapis.com
+                    https://cdnjs.cloudflare.com
+                    https://connect.facebook.net
+                    https://platform.twitter.com
+                    https://www.google-analytics.com
+                    https://www.googletagmanager.com
+                    https://www.instagram.com
+                    https://www.youtube.com
+                    https://*.cast.switch.ch
+                    https://player.vimeo.com;
+  object-src 'none';
+  connect-src 'self' https://*.cast.switch.ch https://*.cloudfront.net *.epfl.ch https://api.cdnjs.com
+    https://*.google-analytics.com https://stats.g.doubleclick.net https://www.google-analytics.com;
+  frame-src 'self' *.epfl.ch https://datawrapper.dwcdn.net https://player.vimeo.com https://api.cast.switch.ch
+    https://platform.twitter.com https://www.instagram.com https://www.youtube.com;
+  style-src-elem 'self' 'unsafe-inline' https://fonts.googleapis.com *.epfl.ch;
+  font-src 'self' https://fonts.gstatic.com *.epfl.ch data:;
+  media-src 'self' *.epfl.ch https://*.cloudfront.net data:;
+  img-src * data: https://s.w.org https://syndication.twitter.com https://www.google-analytics.com;
+  worker-src 'none' blob:;
+  report-uri https://report-uri.epfl.ch/csp-report;
