[WIP][fix] Lower `resources.requests` for the catalog BuildConfig

--- a/ansible/roles/wordpress-namespace/tasks/isas-fsd-catalog.yml
+++ b/ansible/roles/wordpress-namespace/tasks/isas-fsd-catalog.yml
@@ -25,4 +25,7 @@
           to:
             kind: DockerImage
             name: quay-its.epfl.ch/svc0041/isas-fsd-catalog:latest
-        
+        resources:
+          requests:
+            cpu: "100m"
+            memory: "256Mi"
