--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -39,6 +39,15 @@
       tags:
         - rke2-cluster
 
+- name: OLM catalog image
+  hosts: namespace|svc0041t-wordpress
+  gather_facts: False
+  vars_files: ansible-k8s-credentials.yml
+  environment:
+    K8S_AUTH_KUBECONFIG: "{{ k8s_auth_kubeconfig }}"
+  roles:
+    - role: roles/olm-catalog
+
 - name: Production reverse-proxy to OpenShift 3 (during rollover period)
   "hosts":
    - namespace|svc0041p-wordpress
