--- a/ansible/roles/wordpress-namespace/tasks/nginx.yml
+++ b/ansible/roles/wordpress-namespace/tasks/nginx.yml
@@ -187,10 +187,10 @@
                     memory: 1Gi
                   requests:
                     cpu: >-
-                      {{ "1" if inventory_namespace == "svc0041p-wordpress"
+                      {{ "1" if inventory_deployment_stage == "production"
                       else "20m" }}
                     memory: >-
-                      {{ "1Gi" if inventory_namespace == "svc0041p-wordpress"
+                      {{ "1Gi" if inventory_deployment_stage == "production"
                       else "256Mi" }}
                 ports:
                   - containerPort: 8000
@@ -228,10 +228,10 @@
                     memory: 1Gi
                   requests:
                     cpu: >-
-                      {{ "1" if inventory_namespace == "svc0041p-wordpress"
+                      {{ "1" if inventory_deployment_stage == "production"
                       else "20m" }}
                     memory: >-
-                      {{ "1Gi" if inventory_namespace == "svc0041p-wordpress"
+                      {{ "1Gi" if inventory_deployment_stage == "production"
                       else "256Mi" }}
                 volumeMounts:
                   - name: wp-data
