--- a/ansible/roles/wordpress-namespace/tasks/nginx.yml
+++ b/ansible/roles/wordpress-namespace/tasks/nginx.yml
@@ -186,12 +186,8 @@
                     cpu: 750m
                     memory: 1Gi
                   requests:
-                    cpu: >-
-                      {{ "1" if inventory_deployment_stage == "production"
-                      else "20m" }}
-                    memory: >-
-                      {{ "1Gi" if inventory_deployment_stage == "production"
-                      else "256Mi" }}
+                    cpu: '{{ _request_cpu }}'
+                    memory: '{{ _request_ram }}'
                 ports:
                   - containerPort: 8000
                     protocol: TCP
@@ -270,6 +266,13 @@
                           apiVersion: v1
                           fieldPath: metadata.namespace
                         path: namespace
+  vars:
+    _request_cpu: >-
+      {{ "1" if inventory_deployment_stage == "production"
+      else "20m" }}
+    _request_ram: >-
+      {{ "1Gi" if inventory_deployment_stage == "production"
+      else "256Mi" }}
 
 
 - name: Service/wp-nginx
