[feature](WPN-239) Ensure wp-nginx pods are not scheduled on the same node

--- a/ansible/roles/wordpress-namespace/tasks/nginx.yml
+++ b/ansible/roles/wordpress-namespace/tasks/nginx.yml
@@ -167,6 +167,13 @@
             labels:
               app: wp-nginx
           spec:
+            affinity:
+              podAntiAffinity:
+                requiredDuringSchedulingIgnoredDuringExecution:
+                  - labelSelector:
+                      matchLabels:
+                        app: wp-nginx
+                    topologyKey: kubernetes.io/hostname
             serviceAccountName: wp-nginx
             automountServiceAccountToken: false
             containers:
