[feature](WPN-239) Prefer wp-nginx pods to be scheduled across different zones

--- a/ansible/roles/wordpress-namespace/tasks/nginx.yml
+++ b/ansible/roles/wordpress-namespace/tasks/nginx.yml
@@ -174,6 +174,13 @@
                       matchLabels:
                         app: wp-nginx
                     topologyKey: kubernetes.io/hostname
+                preferredDuringSchedulingIgnoredDuringExecution:
+                  - weight: 100
+                    podAffinityTerm:
+                      labelSelector:
+                        matchLabels:
+                          app: wp-nginx
+                      topologyKey: topology.kubernetes.io/zone
             serviceAccountName: wp-nginx
             automountServiceAccountToken: false
             containers:
