[feature] Implement WordPress authentication secret management

--- a/ansible/roles/wordpress-namespace/tasks/nginx.yml
+++ b/ansible/roles/wordpress-namespace/tasks/nginx.yml
@@ -218,6 +218,10 @@
                   - name: kube-api-access
                     mountPath: /var/run/secrets/kubernetes.io/serviceaccount
                     readOnly: true
+                  - name: wordpress-authentication
+                    mountPath: /wp-nonces/wp-nonces.php
+                    subPath: wp-nonces.php
+                    readOnly: true
                   # Uncomment the next three lines to embug the nginx configuration
                   # (see also similar comments elsewhere in the file):
                   # - name: wp-nginx
@@ -292,6 +296,9 @@
                           apiVersion: v1
                           fieldPath: metadata.namespace
                         path: namespace
+              - name: wordpress-authentication
+                secret:
+                  secretName: wordpress-authentication
   vars:
     _request_cpu_serving: >-
       {{ "1" if inventory_deployment_stage == "production"
