--- a/ansible/roles/wordpress-namespace/tasks/secrets.yml
+++ b/ansible/roles/wordpress-namespace/tasks/secrets.yml
@@ -74,3 +74,32 @@
         {{ mariadb_operator_s3_backups.keyId | eyaml(eyaml_keys) }}
     _accessSecret: >-
         {{ mariadb_operator_s3_backups.accessSecret | eyaml(eyaml_keys) }}
+
+- name: Check if WordPress authentication secret exists
+  kubernetes.core.k8s_info:
+    api_version: v1
+    kind: Secret
+    name: wordpress-authentication
+    namespace: "{{ inventory_namespace }}"
+  register: existing_wp_secret
+
+- name: Generate WordPress authentication secrets
+  ansible.builtin.uri:
+    url: "https://api.wordpress.org/secret-key/1.1/salt/"
+    return_content: yes
+  register: wordpress_secret_response
+  when: existing_wp_secret.resources | length == 0
+
+- name: Create or update WordPress authentication secret
+  kubernetes.core.k8s:
+    state: present
+    definition:
+      apiVersion: v1
+      kind: Secret
+      metadata:
+        name: wordpress-authentication
+        namespace: "{{ inventory_namespace }}"
+      type: Opaque
+      data:
+        "wp-nonces.php": "{{ wordpress_secret_response.content | b64encode }}"
+  when: existing_wp_secret.resources | length == 0
