--- a/ansible/roles/wordpress-namespace/tasks/menu-api.yml
+++ b/ansible/roles/wordpress-namespace/tasks/menu-api.yml
@@ -14,7 +14,8 @@
         namespace: "{{ inventory_namespace }}"
       data:
         menu-api-config.yaml: |
-          POD_NAME: ""
+          WP_SERVICE_NAME: "wp-nginx"
+          WP_SERVICE_PORT: 80
           SERVICE_PORT: "3001"
           PATH_REFRESH_FILE: "./data"
           PATH_SITES_FILE: ""
