[fix] Needs `<?php`

--- a/ansible/roles/wordpress-namespace/tasks/secrets.yml
+++ b/ansible/roles/wordpress-namespace/tasks/secrets.yml
@@ -100,6 +100,8 @@
         name: wordpress-authentication
         namespace: "{{ inventory_namespace }}"
       type: Opaque
-      data:
-        "wp-nonces.php": "{{ wordpress_secret_response.content | b64encode }}"
+      stringData:
+        "wp-nonces.php": |
+          <?php
+          {{ wordpress_secret_response.content }}
   when: existing_wp_secret.resources | length == 0
