[fix] the image name must be the same in test and production environment

--- a/ansible/roles/wordpress-namespace/tasks/menu-api.yml
+++ b/ansible/roles/wordpress-namespace/tasks/menu-api.yml
@@ -87,7 +87,7 @@
             serviceAccountName: menu-api
             containers:
               - name: menu-api
-                image: "quay-its.epfl.ch/svc0041/menu-api:2025-004-{{ inventory_deployment_stage }}"
+                image: "quay-its.epfl.ch/svc0041/menu-api:2025-004"
                 resources:
                   limits:
                     cpu: 500m
