[fix?] Increase MariaDB RAM
Yet another stab at fixing the “22:25 outage” a.k.a.
https://go.epfl.ch/WPN-318 . Previously we tried: increasing
capacity (in PHP containers); disabling automatic updates; increasing
capacity again (in number of simultaneous MariaDB connections).

--- a/ansible/roles/wordpress-namespace/tasks/mariadb.yml
+++ b/ansible/roles/wordpress-namespace/tasks/mariadb.yml
@@ -28,6 +28,11 @@
               requests:
                 storage: 1Gi
             storageClassName: "{{ storage_class_to_use }}"
+        resources:
+          requests:
+            memory: 512Mi
+          limits:
+            memory: 600Mi
         rootPasswordSecretKeyRef:
           name: mariadb
           key: root-password
