[feature] create secret for os4 s3

--- a/ansible/roles/wordpress-namespace/tasks/secrets.yml
+++ b/ansible/roles/wordpress-namespace/tasks/secrets.yml
@@ -3,6 +3,7 @@
   with_items:
   - serving-secrets-{{ inventory_deployment_stage }}.yml
   - secrets-vars.yml
+  - s3_secrets_vars.yml
 
 - name: "SMTP password"
   kubernetes.core.k8s:
@@ -53,10 +54,7 @@
         saferpay_prod_customerid: "{{ saferpay.prod.customerid | eyaml(eyaml_keys) | string }}"
         saferpay_prod_terminalid: "{{ saferpay.prod.terminalid | eyaml(eyaml_keys) | string }}"
 
-- tags: always
-  include_vars: "backup-secrets-{{ inventory_deployment_stage }}.yml"
-
-- name: MariaDB operator restore secret
+- name: MariaDB operator restore secret (OS3)
   kubernetes.core.k8s:
     state: present
     definition:
@@ -67,10 +65,19 @@
         namespace: "{{ inventory_namespace }}"
       type: Opaque
       stringData:
-        keyId: "{{ _keyId }}"
-        accessSecret: "{{ _accessSecret }}"
-  vars:
-    _keyId: >-
-        {{ mariadb_operator_s3_backups.keyId | eyaml(eyaml_keys) }}
-    _accessSecret: >-
-        {{ mariadb_operator_s3_backups.accessSecret | eyaml(eyaml_keys) }}
+        keyId: "{{ s3_bucket['os3']['production']['keyId'] }}"
+        accessSecret: "{{ s3_bucket['os3']['production']['accessSecret'] }}"
+
+- name: MariaDB operator backup secret (OS4)
+  kubernetes.core.k8s:
+    state: present
+    definition:
+      apiVersion: v1
+      kind: Secret
+      metadata:
+        name: s3-credentials-for-os4
+        namespace: "{{ inventory_namespace }}"
+      type: Opaque
+      stringData:
+        keyId: "{{ s3_bucket['os4'][inventory_deployment_stage]['keyId'] }}"
+        accessSecret: "{{ s3_bucket['os4'][inventory_deployment_stage]['accessSecret'] }}"
