[feature] create new wp-operator task

--- a/ansible/roles/wordpress-namespace/tasks/main.yml
+++ b/ansible/roles/wordpress-namespace/tasks/main.yml
@@ -73,6 +73,15 @@
   tags:
     - menu_api
 
+- name: "WP_Operator"
+  include_tasks:
+    file: wp-operator.yml
+    apply:
+      tags:
+        - wp_operator
+  tags:
+    - wp_operator
+
 - name: Cloudflare Settings
   when: >-
     "openshift_namespaces_prod" in group_names
